services/cpe/components/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cpe-server
  name: cpe-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cpe-server
  template:
    metadata:
      labels:
        app: cpe-server
    spec:
      containers:
      - image: reg.lokalise.work/services/lokalise-custom-processor-server:latest
        name: server
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 150m
            memory: 256Mi
