services/cpe/components/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cpe-server
  name: cpe-server
  namespace: cpe
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: cpe-server
  type: ClusterIP
